<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/start_recording"
                android:textSize="26sp"
                android:textAlignment="center"/>
            <Switch
                android:layout_width="0dp"
                android:id="@+id/switch_toggle"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
        <EditText
            android:id="@+id/labelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/previous_timestamps"
                android:layout_marginTop="20dp"
                android:layout_weight="1"/>

            <ListView
                android:id="@+id/time_stamps"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

            </ListView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>